[gd_scene load_steps=9 format=3 uid="uid://daekftnwsdsid"]

[ext_resource type="Texture2D" uid="uid://d0qcw74pc34gq" path="res://assets/MyAssets/Maps/workshop int/gears.png" id="1_hcam0"]
[ext_resource type="Script" path="res://scripts/items/collectible/Gears.gd" id="1_kr4vm"]
[ext_resource type="Script" path="res://scripts/inventory/InventoryItem.gd" id="2_nvotk"]
[ext_resource type="Script" path="res://scripts/items/collectible/DescPopup.gd" id="4_e5fy3"]
[ext_resource type="Texture2D" uid="uid://bp36qmygp0moa" path="res://assets/MyAssets/UI/dialogBox.png" id="5_3h78h"]
[ext_resource type="FontFile" uid="uid://digbq0mlkbh3p" path="res://assets/TemplateAssets/Assets/Font/Schr√∂dinger.ttf" id="5_wqrkg"]

[sub_resource type="Resource" id="Resource_q7uo7"]
script = ExtResource("2_nvotk")
name = "Gears"
texture = ExtResource("1_hcam0")

[sub_resource type="CircleShape2D" id="CircleShape2D_xgc36"]
radius = 77.3175

[node name="Gears" type="Area2D"]
script = ExtResource("1_kr4vm")
item = SubResource("Resource_q7uo7")

[node name="Gears" type="Sprite2D" parent="."]
texture = ExtResource("1_hcam0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xgc36")

[node name="DescPopup" type="CanvasLayer" parent="."]
script = ExtResource("4_e5fy3")

[node name="Dialog" type="NinePatchRect" parent="DescPopup"]
anchors_preset = -1
anchor_left = 0.187
anchor_top = 0.669
anchor_right = 0.812
anchor_bottom = 0.81
offset_left = 0.959991
offset_top = -0.52002
offset_right = 0.959961
offset_bottom = 0.199951
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("5_3h78h")
metadata/_edit_use_anchors_ = true

[node name="Message" type="Label" parent="DescPopup/Dialog"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0479167
anchor_top = 0.5
anchor_right = 0.959583
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -22.5
offset_right = 0.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_wqrkg")
theme_override_font_sizes/font_size = 45
text = "Text...."
horizontal_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
